--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,10 @@
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
+    "canvas-confetti": "^1.9.4",
+    "chart.js": "^4.5.1",
+    "docx": "^9.5.1",
+    "file-saver": "^2.0.5",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
