--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,25 +10,34 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.4",
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
     "canvas-confetti": "^1.9.4",
     "chart.js": "^4.5.1",
     "chrono-node": "^2.9.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "docx": "^9.5.1",
     "file-saver": "^2.0.5",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
+    "react-day-picker": "^9.11.3",
     "react-dom": "^19.2.0",
     "react-is": "^19.2.0",
     "react-linkedin-login-oauth2": "^2.0.1",
     "react-router-dom": "^7.9.6",
     "recharts": "^3.4.1",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/node": "^24.10.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.1.0",
@@ -36,6 +45,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "tw-animate-css": "^1.4.0",
     "vite": "^7.2.2"
   }
 }
