--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react": "^19.2.0",
     "react-day-picker": "^9.11.3",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-is": "^19.2.0",
     "react-linkedin-login-oauth2": "^2.0.1",
     "react-router-dom": "^7.9.6",
