--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
+    "@upstash/redis": "^1.35.8",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
@@ -21,6 +22,6 @@
     "mongoose": "^8.19.3",
     "morgan": "^1.10.1",
     "nodemailer": "^7.0.10",
-    "redis": "^5.9.0"
+    "redis": "^5.10.0"
   }
 }
